fixed workflow layout on mobile and hero text size

--- a/css/base.css
+++ b/css/base.css
@@ -13,6 +13,21 @@ p {
   font-family: OpenSans, Helvetica, Arial;
 }
 
+nav {
+  z-index: 2;
+}
+
+nav::before {
+  content: "";
+  /* width: 583px; */
+  /* height: 646px; */
+  background: url(../images/natalie-smyth-cartoon.png) no-repeat right;;
+  /* background-size: auto; */
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1;
+}
   
   @media (min-width: 992px) {
     .rounded-lg-3 { border-radius: .3rem; }
